--- a/layouts/shortcodes/talk.html
+++ b/layouts/shortcodes/talk.html
@@ -1,5 +1,5 @@
 <div class="talk">
     <h4>{{ .Get "title" }}</h4>
     <p><strong>Location:</strong> {{ .Get "location" }}</p>
-    <p><a href="{{ .Get "slidesUrl" }}">View Slides</a></p>
+    <p><a href="{{ .Get "slidesUrl" }}" download>View Slides</a></p>
 </div>
